--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Keep</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" type="image" href="./images/keep.png">
 </head>
 <body>
     <nav>
