--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <nav>
-        <h1>Google Keep Note Taking App</h1>
-        <button>Click Here To Change Colour</button>
+        <div class="navbarandmenu">
+        
+        </div>
     </nav>
 
     <script src="./script.js">
