--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Google Keep</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image" href="./images/keep.png">
+        <!-- importing navbar component styles -->
+        <link rel="stylesheet" href="../../components/Navbar/navbar-styles.css">
+        <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
 </head>
 <body>
-    <nav>
-        <div class="navbarandmenu">
-        
-        </div>
-    </nav>
+    <div class="navbarhomepagediv">
+
+    </div>
 
     <script src="./script.js">
     </script>
