--- a/pages/Editlabelspage/editlabelspage.html
+++ b/pages/Editlabelspage/editlabelspage.html
@@ -15,18 +15,20 @@
 
     </div>
     <div class="lablescontainer">
-      <h3 style="text-align: center;">Edit Labels</h3>
+      <h3 style="text-align: center;">Edit Lables</h3>
       <div class="labelsdisplay" style="display: flex;flex-direction: column;align-items: center;">
          <div class="addlabel">
-            <button class='roundbtn' onclick=><img width="20px" src="../../svg/closeicon.svg" alt="cancel"></button>
-            <input class='note-input' style="border: 1px solid black;" type="text" placeholder="Create New Label" value="" onchange="clickchangedata()">
-            <button class='roundbtn' onclick="clickchangedata()" style="font-weight:400"><img src="../../svg/tickicon.svg" alt="tick"></button>
+            <button class='roundbtn clearinput' onclick="clearinputfunc()"><img width="20px" src="../../svg/closeicon.svg" alt="clearinput"></button>
+            <input id="newlabelinput" class='note-input' style="border: 1px solid black;" type="text" placeholder="Create New Lable" value="">
+            <button class='roundbtn createlabel' onclick="createlabelfunc()" style="font-weight:400"><img src="../../svg/tickicon.svg" alt="tick"></button>
+        </div>
+        <div class="showlabels">
+
         </div>
       </div>
     </div>
     </div>
     <!-- To load and execute one <script> file after another check the below script file, without this method, it will create not found div errors -->
-      <!-- <script src="./editpage-clickfunctions.js"></script> -->
       <script src="./editlabelspage-script.js"></script>
 </body>
 </html>
