--- a/pages/Noteshomepage/noteshomepage.html
+++ b/pages/Noteshomepage/noteshomepage.html
@@ -16,6 +16,9 @@
     <div class="navbarhomepagediv">
 
     </div>
+    <div class="createnotesdiv">
+        
+    </div>
     <div class="notescontainer">
        <h3 style="text-align: center;">Pinned Notes</h3>
       <div class="pinnednotesdiv">
