--- a/index.html
+++ b/index.html
@@ -10,14 +10,33 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image" href="./images/keep.png">
         <!-- importing navbar component styles -->
+        <link rel="stylesheet" href="../../components/noaccountnavbar/noaccountnavbar-styles.css">
         <link rel="stylesheet" href="../../components/Navbar/navbar-styles.css">
         <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbarhomepagediv">
-
-    </div>
-
+    <nav>
+        <div class="navbarhomepagediv"> 
+            
+      </div>
+    </nav>
+    <main>
+        <div class="main-container">
+            <div class="page-text">
+                <h1 class="home">Google Keep.</h1>
+                <p>Save your thoughts, wherever you are</p>
+                <p>Capture what’s on your mind.
+                    Add notes to Keep.</p>
+                <button style="border-radius: 10px;" class="login-btn mainlg-btn">Login</button>
+                <button style="border-radius: 10px;"  class="signup-btn mainsgu-btn">Sign Up</button>
+            </div>
+            </div>
+        </div>
+    </main>
     <script src="./script.js">
     </script>
 </body>
