--- a/pages/Noteshomepage/noteshomepage.html
+++ b/pages/Noteshomepage/noteshomepage.html
@@ -16,7 +16,7 @@
     <div class="navbarhomepagediv">
 
     </div>
-    <h4 style="text-align: center;margin: 5px;">Create Note</h4>
+    <h4 class="createnotesheading" style="text-align: center;margin: 5px;">Create Note</h4>
     <div class="createnotesdiv">
         
     </div>
