--- a/pages/Loginpage/loginpage.html
+++ b/pages/Loginpage/loginpage.html
@@ -9,6 +9,7 @@
 
         <link rel="stylesheet" href="../../components/Navbar/navbar-styles.css">
         <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
+        <link rel="stylesheet" href="./loginpage-styles.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +22,16 @@
       </div>
     </nav>
     <main>
-        <div class="notescontainer">
-        
-
+        <div class="main-container">
+            <div class="formdiv">
+              <form id="loginform">
+                <h1>Login</h1>
+                <input type="email" id="email" name="email" placeholder="Email" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
+                <div class="comments"></div>
+                <button id="submit-btn" type="submit">Log In</button>
+              </form>
+            </div>
         </div>
     </div>
 </main>
