--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image" href="./images/keep.png">
         <!-- importing navbar component styles -->
-        <link rel="stylesheet" href="/components/Noaccountnavbar/noaccountnavbar-styles.css">
+        <!-- <link rel="stylesheet" href="/components/Noaccountnavbar/noaccountnavbar-styles.css">
         <link rel="stylesheet" href="/components/Navbar/navbar-styles.css">
-        <link rel="stylesheet" href="/additional css/roundbutton-styles.css">
+        <link rel="stylesheet" href="/additional css/roundbutton-styles.css"> -->
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
