--- a/pages/Editlabelspage/editlabelspage.html
+++ b/pages/Editlabelspage/editlabelspage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../components/navbar/navbar-styles.css">
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
     <link rel="stylesheet" href="./editlabelspage-styles.css">
+    <link rel="stylesheet" href="/additional css/loader-styles.css"
 </head>
 <body>
     <div class="navbarhomepagediv">
