--- a/pages/Loginpage/loginpage.html
+++ b/pages/Loginpage/loginpage.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="../../components/navbar/navbar-styles.css">
         <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
         <link rel="stylesheet" href="./loginpage-styles.css">
+        <link rel="stylesheet" href="/additional css/loader-styles.css"
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
