--- a/pages/trashpage/trashpage.html
+++ b/pages/trashpage/trashpage.html
@@ -8,6 +8,7 @@
     <!-- importing navbar component styles -->
     <link rel="stylesheet" href="../../components/navbar/navbar-styles.css">
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
+    <link rel="stylesheet" href="/additional css/loader-styles.css"
     <!-- importing notedisplay component styles -->
     <link rel="stylesheet" href="../../components/notedisplay/notedisplay-styles.css">
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css">
