--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <button style="border-radius: 10px;"  class="signup-btn mainsgu-btn">Sign Up</button>
             </div>
             </div>
+            <!-- git name - gkeepclonemaster .This will be pushed to main branch.And then merge with master branch-->
         </div>
     </main>
     <script src="./script.js">
