--- a/pages/Trashpage/trashpage.html
+++ b/pages/Trashpage/trashpage.html
@@ -19,6 +19,7 @@
     </div>
     <div class="notescontainer">
        <h3 style="text-align: center;">Trash Notes</h3>
+       <p style="color:teal;font-style: italic;text-align:center">Trash Notes Will Be Deleted After 30 Days</p>
       <div class="trashnotesdiv">
 
       </div>
